--- a/front/index.html
+++ b/front/index.html
@@ -237,11 +237,49 @@
       altitudeControler.onFinishChange(function(value) {
         camz = guiControls.altitude;
         moveCamera(camx, camy, camz);
-        // camera.position.z = camz;
       });
     
-      // Add OrbitControls so that we can pan around with the mouse.
-      // controls = new THREE.OrbitControls(camera, renderer.domElement);
+      // add controls
+      var keys = { LEFT: 37, UP: 38, RIGHT: 39, BOTTOM: 40, ROTATE: 65, ZOOM: 83, PAN: 68 };
+      userPanSpeed = 200.0;
+      pan = function ( distance ) {
+        camx = camera.position.x + distance.x*userPanSpeed;
+        camy = camera.position.y + distance.y*userPanSpeed;
+        moveCamera(camx, camy, camz);
+      };
+
+      function onKeyDown( event ) {
+        switch ( event.keyCode ) {
+
+          case keys.UP:
+            pan( new THREE.Vector3( 0, 1, 0 ) );
+            break;
+          case keys.BOTTOM:
+            pan( new THREE.Vector3( 0, - 1, 0 ) );
+            break;
+          case keys.LEFT:
+            pan( new THREE.Vector3( - 1, 0, 0 ) );
+            break;
+          case keys.RIGHT:
+            pan( new THREE.Vector3( 1, 0, 0 ) );
+            break;
+        }
+      }
+
+      function onKeyUp( event ) {
+
+        switch ( event.keyCode ) {
+
+          case keys.ROTATE:
+          case keys.ZOOM:
+          case keys.PAN:
+            state = STATE.NONE;
+            break;
+        }
+
+      }
+      window.addEventListener( 'keydown', onKeyDown, false );
+      window.addEventListener( 'keyup', onKeyUp, false );
 
     }
 
@@ -254,7 +292,6 @@
       
       // Render the scene.
       renderer.render(scene, camera);
-      // controls.update();
 
     }
 
