properly queries the backend with needed buildings and displays only needed

--- a/front/index.html
+++ b/front/index.html
@@ -102,7 +102,7 @@
       try {
         var mesh = parseGeom(msg);
         // add to map
-        buildingMap.set(msg.id, mesh);
+        buildingMap.set(msg.id, {mesh:mesh, visible:true});
       } catch (e) {
         console.error(e);
       }
@@ -225,9 +225,28 @@
           console.log("query", south, north, east, west);
           // query the rtree to know what building are needed
           var results = rTree.search([west, south, east, north]);
-          // send to the backend the ids needed
+
+          //remove all buildings from scene
+          buildingMap.forEach(function(building){
+            building.visible = false;
+            scene.remove(building.mesh);
+          });
+
+          results.forEach(function(result) {
+            if (buildingMap.has(result[4].id) === false){
+              // not in the map => ask the backend
+              socket.emit('object', {token : token, id : result[4].id});
+            } else { // in the map
+              var entry = buildingMap.get(result[4].id);
+              // if not visible, added back to the scene
+              scene.add(entry.mesh);
+              entry.visible = true;
+            }
+            
+          });
+
           var buildings = results.forEach(function(result) {
-            socket.emit('object', {token : token, id : result[4].id});
+            
           });
       }
 
