--- a/front/index.html
+++ b/front/index.html
@@ -39,6 +39,12 @@
             margin: 0;
         }
 
+        body{
+            width: 100vw;
+            height: 100vh;
+            overflow: hidden;
+        }
+            
         /*
           In applications, there can be lists but HTML lists have bullet points and a bunch of useless styling attributes 
         */
