fix Map polyfill issue. Fixes #21

--- a/front/index.html
+++ b/front/index.html
@@ -92,7 +92,7 @@
 
         </style>
 
-
+        <script defer src="polyfills/harmony-collections.js"></script>
         <script defer src="app.js"></script>
     </head>
     <body>
