metadata are now in index.html and gzipped fixes #46

--- a/front/index.html
+++ b/front/index.html
@@ -115,6 +115,8 @@
         
         <script defer src="polyfills/harmony-collections.js"></script>
         <script defer src="app.js"></script>
+
+        <script id="metadata" type="application/json"></script>
     </head>
     <body>
     </body>
