--- a/front/index.html
+++ b/front/index.html
@@ -97,13 +97,22 @@
             width: 100%;
             height: 100%;
 
-            background-color: rgba(50, 50, 50, 0.9);
+            background-color: rgb(50, 50, 50);
+            opacity: 0.9;
             z-index: 1;
             color: white;
             font-size: 1em;
             font-family: 'Raleway', sans-serif;
             font-weight: 300;
-            
+
+            -webkit-transition: opacity 3s;
+            -moz-transition: opacity 3s;
+            -o-transition: opacity 3s;
+            transition: opacity 3s;
+        }
+
+        .hidden {
+            visibility: hidden;
         }
 
         #instructions{
