--- a/front/index.html
+++ b/front/index.html
@@ -105,10 +105,10 @@
             font-family: 'Raleway', sans-serif;
             font-weight: 300;
 
-            -webkit-transition: opacity 3s;
-            -moz-transition: opacity 3s;
-            -o-transition: opacity 3s;
-            transition: opacity 3s;
+            -webkit-transition: visibility 3s, opacity 3s;
+            -moz-transition: visibility 3s, opacity 3s;
+            -o-transition: visibility 3s, opacity 3s;
+            transition: visibility 3s, opacity 3s;
         }
 
         .hidden {
