--- a/core-client/index.html
+++ b/core-client/index.html
@@ -165,8 +165,8 @@
     </head>
     <body>
         <menu>
-            <button id="light">Add random light</button>
-            <button id="mesh">Add random mesh</button>
+            <button id="light">Add green light</button>
+            <button id="mesh">Add red cube mesh</button>
             <button id="controls">switch controls</button>
         </menu>
         
