--- a/front/index.html
+++ b/front/index.html
@@ -105,14 +105,7 @@
             font-family: 'Raleway', sans-serif;
             font-weight: 300;
 
-            -webkit-transition: visibility 3s, opacity 3s;
-            -moz-transition: visibility 3s, opacity 3s;
-            -o-transition: visibility 3s, opacity 3s;
-            transition: visibility 3s, opacity 3s;
-        }
-
-        .hidden {
-            visibility: hidden;
+            transition: opacity 2s;
         }
 
         #instructions{
