mouseout stops animation

--- a/front/index.html
+++ b/front/index.html
@@ -122,12 +122,13 @@
             text-shadow: 0 0 10px #DBB460;
             text-align: center;
             font-size: 2.5em;
+            font-weight: 300;
             color: white;
         }
 
         h2 {
             font-size: 1em;
-            font-weight:300;
+            font-weight: 300;
             text-decoration: underline;
         }
 
@@ -176,7 +177,7 @@
             }
         </script>
         
-        <script defer src="polyfills/harmony-collections.js"></script>
+        <script src="polyfills/harmony-collections.js"></script>
         <script defer src="app.js"></script>
 
         <script id="metadata" type="application/json"></script>
