changing controls via button works

--- a/core-client/index.html
+++ b/core-client/index.html
@@ -165,9 +165,9 @@
     </head>
     <body>
         <menu>
-            <button id="#light">Add random light</button>
-            <button id="#mesh">Add random mesh</button>
-            <button id="#controls">switch controls</button>
+            <button id="light">Add random light</button>
+            <button id="mesh">Add random mesh</button>
+            <button id="controls">Switch to first person controls</button>
         </menu>
         
         <div id="view"></div>
